--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/jetstream": "^2.10",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "2.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
